v1.2.2	(Aug xx, 2006)

	* Bugfixes
	* Support for HTTP Digest authentication (via included Snoopy class)

v1.2.1	(Jul 17, 2006)

	* Bugfixes

v1.2.0	(Jun 20, 2006)

	* XML-RPC Interface (using XML-RPC for PHP, from http://phpxmlrpc.sourceforge.net/)
	* Basic support for themes
	* New default interface theme
	* New filter action: set starred
	* Various usability improvements

v1.1.6	(May 02, 2006)
	
	* Bugfixes

v1.1.5	(Mar 31, 2006)

	* Enhanced support for RTL written languages
	* Lightweight version, optimized for mobile devices
	* Improved fatal error handling
	* Various interface cleanups

v1.1.4	(Mar 20, 2006)

	* Support for Opera 9 (tested on TP2)
	* Search and browse feeds by category
	* Support for database-backed sessions

v1.1.3	(Feb 17, 2006)

	* Broken feed editor fixed
	* Compatibility layer for mb_* functions
	* Server-side update daemon

v1.1.2	(Jan 20, 2006)

	* Support for feeds linked together
	* Various SQL optimizations
	* Integrated browser for registered feeds
	* Interface fixes and cleanups

v1.1.1	(Dec 26, 2005)

	* Various XML export/import fixes
	* Add filter action on frontpage
	* Optional login via SSL
	* Adaptive view mode
	* Combined feed display
	* Collapsable categories in feedlist
	* HTTP Basic authentication support for reading protected feeds 
	* Various MSIE compatibility fixes/workarounds

v1.1.p2	(Dec 07, 2005)

	* Fix schema_version handling in xml-import.php

v1.1.p1	(Dec 07, 2005)

	* Fix session handling in xml-import.php

v1.1		(Dec 07, 2005)

	! Please read UPGRADING for upgrade instructions from version 1.0.7 !

	* Multi-user support (yay!)
	* Per-feed purge preferences (0 means default, negative numbers disable purging)
	* Reworked compact stylesheet support
	* Interactive user preferences editor
	* Per-feed content filters
	* Support for user stylesheets
	* Feed categories
	* "Mark as read" for tags
	* Test button in label editor
	* Show number of unread articles in title
	
v1.0.7	(Nov 14, 2005)
