@@ -2,6 +2,7 @@ v1.2.2	(Aug xx, 2006)
 
 	* Bugfixes
 	* Support for HTTP Digest authentication (via included Snoopy class)
+	* Support for generation of aggregated feeds
 
 v1.2.1	(Jul 17, 2006)
 
